Filter aur packages in devel check example

--- a/man/paru.8
+++ b/man/paru.8
@@ -489,7 +489,7 @@ paru \-S \fIfoo\fR \-\-mflags "\-\-skipchecksums \-\-skippgpcheck"
 Installs \fIfoo\fR while skipping checksums and PGP checks.
 
 .TP
-pacman -Qmq | grep -Ee '-(cvs|svn|git|hg|bzr|darcs)$' | paru -S --needed -
+pacman -Qmq | grep -Ee '-(cvs|svn|git|hg|bzr|darcs)$' | paru -Ta - | paru -S --needed -
 pacaur-like devel check.
 
 .SH ENVIRONMENT VARIABLES
