Made TCP keepalive timeout configurable

--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -167,6 +167,10 @@ cache to be refreshed every time, while setting this to -1 will cause the cache
 to never be refreshed. Defaults to 7.
 
 .TP
+.B KeepaliveTimeout = N
+Time in seconds to keep TCP connection alive. Defaults to 15.
+
+.TP
 .B PacmanConf = path/to/pacman.conf
 The pacman config file to use.
 
