--- a/man/paru.8
+++ b/man/paru.8
@@ -504,6 +504,12 @@ Overridden by \-\-builddir.
 .B PARU_CONF
 Overrides where paru will look for its config file.
 
+.TP
+.B PARU_PAGER
+The pager paru will use for file review. Has higher priority than PAGER but lower priority
+than paru.conf.
+
+
 .SH FILES
 .TP
 .B CONFIG DIRECTORY
