--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -146,9 +146,9 @@ Set an alternative AUR URL. This is mostly useful for users in China who wish
 to use https://aur.tuna.tsinghua.edu.cn/.
 
 .TP
-.B BuildDir = /path/to/dir
-Directory to use for building AUR Packages. This directory is also used as
-the AUR cache when deciding if paru should skip builds.
+.B CloneDir = /path/to/dir
+Directory used to download and run PKGBUILDs.
+
 
 .TP
 .B SortBy = <votes|popularity|name|base|submitted|modified|id|baseid>
