--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -275,3 +275,7 @@ passed to sudo.
 Passes arguments to the file manager. These flags get passed to every instance
 where file manager is called by paru. Arguments are split on whitespace before
 being passed to file manager.
+
+.TP
+.B Pager = Command
+Command to use for paging
