--- a/man/paru.8
+++ b/man/paru.8
@@ -260,7 +260,15 @@ Sort AUR results by a specific field during search. Defaults to votes.
 Search for AUR packages by querying the specified field. Defaults to name-desc.
 
 .TP
-.B \-\-[no]upgrademenu
+.B \-\-skipreview
+Skip the review process.
+
+.TP
+.B \-\-review
+Don't skip the review process.
+
+.TP
+.B \-\-upgrademenu
 Show a detailed list of updates in a similar format to pacman's VerbosePkgLists
 option. (See 
 .BR pacman.conf(5)).
