--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -201,6 +201,10 @@ in other enabled repos.
 Build packages in a chroot. This rquires the LocalRepo option to be enabled.
 Optionaly a directory may be passed to specify where the create the chroot.
 
+.TP
+.B SkipReview
+Skip the review process.
+
 .SH BIN
 Options belonging to the [bin] section.
 
