Update help and man page

--- a/man/paru.8
+++ b/man/paru.8
@@ -116,6 +116,12 @@ Print a list of all AUR and repo packages. This allows shell completion
 and is not intended to be used directly by the user.
 
 .TP
+.B \-s, \-\-stats
+Displays information about installed packages and system health. If there
+are orphaned, or out-of-date packages, or packages that no longer
+exist on the AUR; warnings will be displayed.
+
+.TP
 .B \-w, \-\-news
 Print new news from the Arch Linux homepage. News is considered new if it is
 newer than the build date of all native packages. Pass this twice to show all
