--- a/man/paru.8
+++ b/man/paru.8
@@ -259,8 +259,7 @@ separated list that is quoted by the shell.
 .B \-\-completioninterval <days>
 Time in days to refresh the completion cache. Setting this to 0 will cause the
 cache to be refreshed every time, while setting this to -1 will cause the cache
-to never be re    -c --comments         Print AUR comments for pkgbuild
-freshed. Defaults to 7.
+to never be refreshed. Defaults to 7.
 
 .TP
 .B \-\-sortby <votes|popularity|id|baseid|name|base|submitted|modified>
