--- a/man/paru.8
+++ b/man/paru.8
@@ -460,8 +460,10 @@ Do not loop sudo calls in the background.
 
 .TP
 .B localrepo [= Repos...]
-Build packages into a local repo. The repo must already be declared in pacman.conf
-but does not have to already exist on disk.
+Use a local repo to build and upgrade AUR packages.
+
+Paru will act on packages in the enabled repos instead of foreign packages.
+The repo must already be declared in pacman.conf but does not have to already exist on disk.
 
 Optionally a list of repos to use can be passed. By default paru will consider all
 local repos, building new packages into the fist listed repo and upgrading the packages
