Add an option to show upstream URLs
Added an option so that, when using looking for packages to install, they show their upstream URL.

Whenever I'm looking for a package, I like to see if they're updated regularly. So I go to the source to see when the last update was.

This option takes way the burden of doing `-Si` for every package. And since it's optional, if people don't want this, they can keep it turned off.

--- a/man/paru.8
+++ b/man/paru.8
@@ -397,6 +397,10 @@ gpg config\%.
 Print new news during sysupgrade.
 
 .TP
+.B \-\-showupstream
+Print the upstream url of packages.
+
+.TP
 .B \-\-useask
 Use pacman's --ask flag to automatically confirm package conflicts. Paru lists
 conflicts ahead of time. It is possible that paru does not detect a conflict, 
