--- a/man/paru.8
+++ b/man/paru.8
@@ -71,6 +71,11 @@ cache. Cleaning untracked files will wipe any downloaded sources or
 built packages but will keep already downloaded VCS sources.
 
 .TP
+.B \-Sss
+Paru will output a verbose search result when passing two '--search' or '-s'
+flags, ultimately showing the upstream URL of each package.
+
+.TP
 .B \-S, \-Si, \-Sl, \-Ss, \-Su, \-Qu
 Paru will also handle AUR packages for these operations.
 
@@ -395,10 +400,6 @@ gpg config\%.
 .TP
 .B \-\-newsonupgrade
 Print new news during sysupgrade.
-
-.TP
-.B \-\-showupstream
-Print the upstream url of packages.
 
 .TP
 .B \-\-useask
