Add AUR URL field

--- a/man/paru.8
+++ b/man/paru.8
@@ -72,8 +72,8 @@ built packages but will keep already downloaded VCS sources.
 
 .TP
 .B \-Sss
-Paru will output a verbose search result when passing two '--search' or '-s'
-flags, ultimately showing the upstream URL of each package.
+Paru will also output a verbose search result when passing two
+'--search' or '-s' flags.
 
 .TP
 .B \-S, \-Si, \-Sl, \-Ss, \-Su, \-Qu
