Fix packages.aur not being updated
Fixes #267

--- a/man/paru.8
+++ b/man/paru.8
@@ -554,7 +554,7 @@ The cache directory is \fI$XDG_CACHE_HOME/paru/\fR. If
 \fB$XDG_CACHE_HOME\fR is unset, the cache directory will fall back to
 \fI$HOME/.cache/paru\fR.
 
-\fIcompletion.aur\fR holds a list of of all AUR packages for shell
+\fIpackages.aur\fR holds a list of of all AUR packages for shell
 completion. By default the completion files are refreshed every 7 days.
 
 \fIdevel.json\fR tracks VCS packages and the latest commit of each source. If
