Fix typos in man pages

--- a/man/paru.8
+++ b/man/paru.8
@@ -476,8 +476,8 @@ in other enabled repos.
 
 .TP
 .B \-\-chroot [= /path/to/chroot]
-Build packages in a chroot. This rquires the LocalRepo option to be enabled.
-Optionaly a directory may be passed to specify where the create the chroot.
+Build packages in a chroot. This requires the LocalRepo option to be enabled.
+Optionally a directory may be passed to specify where to create the chroot.
 
 .TP
 .B \-\-nochroot
