Fix typo in manpage

--- a/man/paru.8
+++ b/man/paru.8
@@ -37,7 +37,7 @@ Linux repositories.
 
 .TP
 .B \-U, \-\-upgrade
-When ran without targets, like makepkg, builds a PKGBUILD in the currrent directory.
+When ran without targets, like makepkg, builds a PKGBUILD in the current directory.
 
 
 .TP
