Use -d/--delete to clean the whole package instead of -Scc

--- a/man/paru.8
+++ b/man/paru.8
@@ -68,7 +68,8 @@ Paru will also remove the package from the local repo.
 .B \-Sc
 Paru will also clean cached AUR packages and any untracked files in the
 cache. Cleaning untracked files will wipe any downloaded sources or
-built packages but will keep already downloaded VCS sources.
+built packages but will keep already downloaded VCS sources. Clean can
+be passed twice to delete all files.
 
 .TP
 .B \-Sss
