Add sign option

--- a/man/paru.8
+++ b/man/paru.8
@@ -485,6 +485,13 @@ Optionally a directory may be passed to specify where to create the chroot.
 .B \-\-nochroot
 Don't build packages in a chroot.
 
+.TP
+.B \-\-sign [= key]
+Sign packages with gpg. Optionally indicate which key to sign with.
+
+.TP
+.B \-\-nosign
+Don't sign package with gpg.
 
 .SH EXAMPLES
 .TP
