--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -203,6 +203,10 @@ in other enabled repos.
 Build packages in a chroot. This requires the LocalRepo option to be enabled.
 Optionally a directory may be passed to specify where to create the chroot.
 
+TP
+.B Sign [= key]
+Sign packages with gpg. Optionally indicate which key to sign with.
+
 .TP
 .B SkipReview
 Skip the review process.
