Add option to sign databases

--- a/man/paru.8
+++ b/man/paru.8
@@ -499,6 +499,14 @@ Sign packages with gpg. Optionally indicate which key to sign with.
 .B \-\-nosign
 Don't sign package with gpg.
 
+.TP
+.B \-\-signdb [= key]
+Sign databases with gpg. Optionally indicate which key to sign with.
+
+.TP
+.B \-\-nosigndb
+Don't sign databases with gpg.
+
 .SH EXAMPLES
 .TP
 paru \fIfoo\fR
