--- a/man/paru.conf.5
+++ b/man/paru.conf.5
@@ -207,6 +207,10 @@ TP
 .B Sign [= key]
 Sign packages with gpg. Optionally indicate which key to sign with.
 
+TP
+.B SignDb [= key]
+Sign databases with gpg. Optionally indicate which key to sign with.
+
 .TP
 .B SkipReview
 Skip the review process.
