--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 12:11+0800\n"
+"PO-Revision-Date: 2021-06-28 12:18+0800\n"
 "Last-Translator: Yufan You <ouuansteve@gmail.com>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -103,7 +103,7 @@ msgstr "无法找到 pacman.conf 中的本地仓库 '{}'"
 
 #: src/config.rs:670
 msgid "failed to initialize alpm: root={} dbpath={}"
-msgstr ""
+msgstr "未能成功初始化 alpm: root={} dbpath={}"
 
 #: src/config.rs:740 src/config.rs:873
 msgid "value can not be empty for key '{}'"
@@ -135,7 +135,7 @@ msgstr "选项 '{}' 不接受值"
 
 #: src/config.rs:947 src/install.rs:1796
 msgid "There are {:n} providers available for {:pkg}:"
-msgstr ""
+msgstr "软件包 {:pkg} 有 {:n} 个提供者:"
 
 #: src/config.rs:961 src/info.rs:56 src/info.rs:95 src/install.rs:1755
 #: src/install.rs:1804
@@ -240,7 +240,7 @@ msgstr "无"
 
 #: src/info.rs:30 src/query.rs:51
 msgid "package '{}' was not found"
-msgstr ""
+msgstr "没有找到软件包 '{}'"
 
 #: src/info.rs:57 src/info.rs:96
 msgid "Name"
@@ -360,7 +360,7 @@ msgstr "正在解析软件包列表..."
 
 #: src/install.rs:261 src/install.rs:1462
 msgid "{}-{} is up to date -- skipping build"
-msgstr ""
+msgstr "{}-{} 已是最新 -- 跳过构建"
 
 #: src/install.rs:333 src/query.rs:50 src/lib.rs:84
 msgid "error:"
@@ -456,10 +456,12 @@ msgid ""
 "\n"
 "    {:missing} (wanted by: {:stack})"
 msgstr ""
+"\n"
+"    {:missing} (被 {:stack} 需要)"
 
 #: src/install.rs:996 src/install.rs:1941
 msgid "{}-{} is up to date -- skipping"
-msgstr ""
+msgstr "{}-{} 已是最新 -- 跳过"
 
 #: src/install.rs:1011
 msgid "Calculating conflicts..."
@@ -545,7 +547,7 @@ msgstr ""
 
 #: src/install.rs:1965
 msgid "{}-{} is up to date -- skipping install"
-msgstr ""
+msgstr "{}-{} 已是最新 -- 跳过安装"
 
 #: src/keys.rs:47
 msgid "keys need to be imported:)"
@@ -553,7 +555,7 @@ msgstr "需要导入公钥:)"
 
 #: src/keys.rs:52
 msgid "     {:key} wanted by: {:base}"
-msgstr ""
+msgstr "     {:key} 被 {:base} 需要"
 
 #: src/news.rs:57
 msgid "No Date "
@@ -649,11 +651,11 @@ msgstr ""
 
 #: src/upgrade.rs:179
 msgid "warning:"
-msgstr ""
+msgstr "警告:"
 
 #: src/upgrade.rs:181
 msgid "{:pkg}: ignoring package upgrade ({:old} => {:new})"
-msgstr ""
+msgstr "{:pkg}: 正在忽略更新 ({:old} => {:new})"
 
 #: src/upgrade.rs:334
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
@@ -693,7 +695,7 @@ msgstr "不合法的数字: {}"
 
 #: src/util.rs:326
 msgid "invalid value: {:n} is not between 1 and {:max}"
-msgstr ""
+msgstr "不合法的值: {:n} 不在 1 和 {:max} 之间"
 
 #: src/lib.rs:153
 msgid "can not use chroot builds: devtools is not installed"
