--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 17:37+0800\n"
+"PO-Revision-Date: 2021-06-28 17:47+0800\n"
 "Last-Translator: Yufan You <ouuansteve@gmail.com>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -23,7 +23,7 @@ msgstr "你想要从缓存中移除所有 AUR 包吗？"
 
 #: src/clean.rs:33
 msgid "Do you want to remove all other AUR packages from cache?"
-msgstr "你想要从缓存中移除所有未安装的 AUR 包吗？"
+msgstr "你想要从缓存中删除所有其他的 AUR 包吗？"
 
 #: src/clean.rs:40
 msgid "Clone Directory: {}"
