--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 17:47+0800\n"
+"PO-Revision-Date: 2021-06-28 17:52+0800\n"
 "Last-Translator: Yufan You <ouuansteve@gmail.com>\n"
 "Language-Team: \n"
 "Language: zh_CN\n"
@@ -543,7 +543,7 @@ msgid ""
 msgstr ""
 "\n"
 "\n"
-"输入某个选择 (默认=全部选定): "
+"输入选择 (默认=全部选定): "
 
 #: src/install.rs:1965
 msgid "{}-{} is up to date -- skipping install"
