--- a/po/zh_CN.po
+++ b/po/zh_CN.po
@@ -3,686 +3,704 @@
 # This file is distributed under the same license as the paru package.
 # FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
-#, fuzzy
 msgid ""
 msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
-"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
-"Language: \n"
+"PO-Revision-Date: 2021-06-28 17:52+0800\n"
+"Last-Translator: Yufan You <ouuansteve@gmail.com>\n"
+"Language-Team: \n"
+"Language: zh_CN\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
+"X-Generator: Poedit 3.0\n"
 
 #: src/clean.rs:31
 msgid "Do you want to remove ALL AUR packages from cache?"
-msgstr ""
+msgstr "你想要从缓存中移除所有 AUR 包吗？"
 
 #: src/clean.rs:33
 msgid "Do you want to remove all other AUR packages from cache?"
-msgstr ""
+msgstr "你想要从缓存中删除所有其他的 AUR 包吗？"
 
 #: src/clean.rs:40
 msgid "Clone Directory: {}"
-msgstr ""
+msgstr "克隆目录: {}"
 
 #: src/clean.rs:46
-msgid "\n"
+msgid ""
+"\n"
 "Diff Directory: {}"
 msgstr ""
+"\n"
+"差异目录: {}"
 
 #: src/clean.rs:48
 msgid "Do you want to remove all saved diffs?"
-msgstr ""
+msgstr "你想要移除所有已保存的差异吗？"
 
 #: src/clean.rs:64
 msgid "can't open diff dir: {}"
-msgstr ""
+msgstr "无法打开差异目录: {}"
 
 #: src/clean.rs:75 src/clean.rs:133
 msgid "could not remove '{}'"
-msgstr ""
+msgstr "无法移除 '{}'"
 
 #: src/clean.rs:93
 msgid "can't open clone dir: {}"
-msgstr ""
+msgstr "无法打开克隆目录: {}"
 
 #: src/command_line.rs:127
 msgid "option {} expects a value"
-msgstr ""
+msgstr "需要为选项 {} 提供一个值"
 
 #: src/command_line.rs:158 src/command_line.rs:327
 msgid "option {} does not allow a value"
-msgstr ""
+msgstr "选项 {} 不接受值"
 
 #: src/command_line.rs:318
 msgid "unknown option --{}"
-msgstr ""
+msgstr "未知的选项 --{}"
 
 #: src/command_line.rs:321
 msgid "unknown option -{}"
-msgstr ""
+msgstr "未知的选项 -{}"
 
 #: src/completion.rs:27
 msgid "failed to open cache file '{}'"
-msgstr ""
+msgstr "未能打开缓存文件 '{}'"
 
 #: src/completion.rs:65
 msgid "could not update aur cache"
-msgstr ""
+msgstr "未能更新 AUR 缓存"
 
 #: src/config.rs:174
 msgid "invalid value '{:val}' for key '{:key}', expected: {:exp}"
-msgstr ""
+msgstr "'{:val}' 不是键 '{:key}' 的合法值，期望值为: {:exp}"
 
 #: src/config.rs:474
 msgid "failed to find cache directory"
-msgstr ""
+msgstr "未能找到缓存目录"
 
 #: src/config.rs:477
 msgid "failed to find config directory"
-msgstr ""
+msgstr "未能找到配置目录"
 
 #: src/config.rs:501
 msgid "config file '{}' does not exist"
-msgstr ""
+msgstr "配置文件 '{}' 不存在"
 
 #: src/config.rs:550
 msgid "only one operation may be used at a time"
-msgstr ""
+msgstr "一次只能使用一个操作"
 
 #: src/config.rs:638
 msgid "can not find local repo '{}' in pacman.conf"
-msgstr ""
+msgstr "无法找到 pacman.conf 中的本地仓库 '{}'"
 
 #: src/config.rs:670
 msgid "failed to initialize alpm: root={} dbpath={}"
-msgstr ""
+msgstr "未能初始化 alpm: root={} dbpath={}"
 
 #: src/config.rs:740 src/config.rs:873
 msgid "value can not be empty for key '{}'"
-msgstr ""
+msgstr "键 '{}' 的值不能为空"
 
 #: src/config.rs:756
 msgid "key '{}' does not belong to a section"
-msgstr ""
+msgstr "键 '{}' 不属于任何一个设置节"
 
 #: src/config.rs:762
 msgid "unknown section '{}'"
-msgstr ""
+msgstr "未知的选项节 '{}'"
 
 #: src/config.rs:769 src/config.rs:824 src/config.rs:829
 msgid "key can not be empty"
-msgstr ""
+msgstr "键不能为空"
 
 #: src/config.rs:791
 msgid "error: unknown option '{}' in section [bin]"
-msgstr ""
+msgstr "错误: 选项节 [bin] 中有未知的选项 '{}'"
 
 #: src/config.rs:891
 msgid "error: unknown option '{}' in section [options]"
-msgstr ""
+msgstr "错误: 选项节 [options] 中有未知的选项 '{}'"
 
 #: src/config.rs:896
 msgid "option '{}' does not take a value"
-msgstr ""
+msgstr "选项 '{}' 不接受值"
 
 #: src/config.rs:947 src/install.rs:1796
 msgid "There are {:n} providers available for {:pkg}:"
-msgstr ""
+msgstr "软件包 {:pkg} 有 {:n} 个提供者:"
 
-#: src/config.rs:961 src/info.rs:56 src/info.rs:95 src/install.rs:1755 src/install.rs:1804
+#: src/config.rs:961 src/info.rs:56 src/info.rs:95 src/install.rs:1755
+#: src/install.rs:1804
 msgid "Repository"
-msgstr ""
+msgstr "软件库"
 
 #: src/config.rs:983
 msgid "  failed to sync {}"
-msgstr ""
+msgstr "  未能同步 {}"
 
 #: src/devel.rs:129 src/download.rs:179
 msgid "Querying AUR..."
-msgstr ""
+msgstr "正在查询 AUR..."
 
 #: src/devel.rs:142 src/devel.rs:166 src/install.rs:694
 msgid "failed to parse srcinfo for '{}'"
-msgstr ""
+msgstr "未能解析 '{}' 的 srcinfo"
 
 #: src/devel.rs:184
 msgid "Looking for devel repos..."
-msgstr ""
+msgstr "正在搜寻开发版仓库..."
 
 #: src/devel.rs:193
 msgid "failed to save devel info"
-msgstr ""
+msgstr "未能保存开发版信息"
 
 #: src/devel.rs:382
 msgid "package does not have an update"
-msgstr ""
+msgstr "软件包没有更新"
 
 #: src/devel.rs:417
 msgid "failed to lookup: {}"
-msgstr ""
+msgstr "未能查找: {}"
 
 #: src/devel.rs:445
 msgid "invalid json: {}"
-msgstr ""
+msgstr "不合法的 json: {}"
 
 #: src/download.rs:83
 msgid "packages not in the AUR: "
-msgstr ""
+msgstr "不在 AUR 中的软件包: "
 
 #: src/download.rs:94
 msgid "marked out of date: "
-msgstr ""
+msgstr "被标记为已过期: "
 
 #: src/download.rs:105
 msgid "orphans: "
-msgstr ""
+msgstr "无人维护: "
 
 #: src/download.rs:206
 msgid "could not get current directory"
-msgstr ""
+msgstr "无法获取当前目录"
 
 #: src/download.rs:210
 msgid "can not get repo packages: asp is not installed"
-msgstr ""
+msgstr "无法获取软件库中的包: 需要安装 asp"
 
 #: src/download.rs:231
 msgid "Missing ABS packages "
-msgstr ""
+msgstr "缺失 ABS 包 "
 
-#: src/download.rs:250 src/download.rs:276 src/download.rs:530 src/download.rs:543 src/download.rs:557 src/exec.rs:72 src/exec.rs:113 src/exec.rs:122 src/exec.rs:148 src/exec.rs:161 src/exec.rs:186 src/exec.rs:200 src/exec.rs:221 src/exec.rs:234 src/install.rs:744 src/install.rs:807 src/install.rs:845 src/keys.rs:74
+#: src/download.rs:250 src/download.rs:276 src/download.rs:530
+#: src/download.rs:543 src/download.rs:557 src/exec.rs:72 src/exec.rs:113
+#: src/exec.rs:122 src/exec.rs:148 src/exec.rs:161 src/exec.rs:186
+#: src/exec.rs:200 src/exec.rs:221 src/exec.rs:234 src/install.rs:744
+#: src/install.rs:807 src/install.rs:845 src/keys.rs:74
 msgid "failed to run:"
-msgstr ""
+msgstr "未能运行:"
 
 #: src/download.rs:263
 msgid "does not contain PKGBUILD: skipping"
-msgstr ""
+msgstr "不包含 PKGBUILD: 正在跳过"
 
 #: src/download.rs:294
 msgid " ({:total>padding$}/{:total}) downloading: {:pkg}"
-msgstr ""
+msgstr " ({:total>padding$}/{:total}) 正在下载 {:pkg}"
 
 #: src/download.rs:317
 msgid "Downloading PKGBUILDs..."
-msgstr ""
+msgstr "正在下载 PKGBUILD..."
 
 #: src/download.rs:321
 msgid " PKGBUILDs up to date"
-msgstr ""
+msgstr " PKGBUILD 都是最新的"
 
 #: src/download.rs:520
 msgid "{} is not installed: can not get repo packages"
-msgstr ""
+msgstr "未安装 {}: 无法获取软件库中的包"
 
 #: src/download.rs:561
 msgid "asp returned {}"
-msgstr ""
+msgstr "asp 返回了 {}"
 
 #: src/exec.rs:86
 msgid "Pacman is currently in use, please wait..."
-msgstr ""
+msgstr "Pacman 正在使用中，请等待..."
 
 #: src/fmt.rs:6 src/info.rs:146 src/search.rs:176
 msgid "None"
-msgstr ""
+msgstr "无"
 
 #: src/info.rs:30 src/query.rs:51
 msgid "package '{}' was not found"
-msgstr ""
+msgstr "没有找到软件包 '{}'"
 
 #: src/info.rs:57 src/info.rs:96
 msgid "Name"
-msgstr ""
+msgstr "名字"
 
 #: src/info.rs:58 src/info.rs:97
 msgid "Version"
-msgstr ""
+msgstr "版本"
 
 #: src/info.rs:59 src/info.rs:98
 msgid "Description"
-msgstr ""
+msgstr "描述"
 
 #: src/info.rs:60 src/info.rs:106
 msgid "Groups"
-msgstr ""
+msgstr "组"
 
 #: src/info.rs:61 src/info.rs:107
 msgid "Licenses"
-msgstr ""
+msgstr "许可证"
 
 #: src/info.rs:62 src/info.rs:108
 msgid "Provides"
-msgstr ""
+msgstr "提供"
 
 #: src/info.rs:63 src/info.rs:109
 msgid "Depends On"
-msgstr ""
+msgstr "依赖于"
 
 #: src/info.rs:64 src/info.rs:110
 msgid "Make Deps"
-msgstr ""
+msgstr "生成依赖"
 
 #: src/info.rs:65 src/info.rs:111
 msgid "Check Deps"
-msgstr ""
+msgstr "检查依赖"
 
 #: src/info.rs:66 src/info.rs:113
 msgid "Conflicts With"
-msgstr ""
+msgstr "与它冲突"
 
 #: src/info.rs:67 src/info.rs:114
 msgid "Maintainer"
-msgstr ""
+msgstr "维护者"
 
 #: src/info.rs:68 src/info.rs:115
 msgid "Votes"
-msgstr ""
+msgstr "得票"
 
 #: src/info.rs:69 src/info.rs:116
 msgid "Popularity"
-msgstr ""
+msgstr "受欢迎度"
 
 #: src/info.rs:70 src/info.rs:117
 msgid "First Submitted"
-msgstr ""
+msgstr "首次提交"
 
 #: src/info.rs:71 src/info.rs:118
 msgid "Last Modified"
-msgstr ""
+msgstr "最后修改"
 
 #: src/info.rs:72 src/info.rs:120
 msgid "Out Of Date"
-msgstr ""
+msgstr "过时"
 
 #: src/info.rs:73 src/info.rs:125
 msgid "ID"
-msgstr ""
+msgstr "ID"
 
 #: src/info.rs:74 src/info.rs:126
 msgid "Package Base ID"
-msgstr ""
+msgstr "包基础 ID"
 
 #: src/info.rs:75 src/info.rs:127
 msgid "Keywords"
-msgstr ""
+msgstr "关键字"
 
 #: src/info.rs:76 src/info.rs:129
 msgid "Snapshot URL"
-msgstr ""
+msgstr "快照 URL"
 
 #: src/info.rs:92
 msgid "No"
-msgstr ""
+msgstr "否"
 
 #: src/info.rs:112
 msgid "Optional Deps"
-msgstr ""
+msgstr "可选依赖"
 
 #: src/install.rs:131 src/install.rs:545 src/install.rs:944
 msgid "no architecture"
-msgstr ""
+msgstr "无架构"
 
 #: src/install.rs:138
 msgid "can't build package as root"
-msgstr ""
+msgstr "无法以 root 身份构建软件包"
 
 #: src/install.rs:142
 msgid "failed to parse srcinfo generated by makepkg"
-msgstr ""
+msgstr "未能解析由 makepkg 生成的 srcinfo"
 
 #: src/install.rs:171 src/install.rs:442
 msgid "Resolving dependencies..."
-msgstr ""
+msgstr "正在解析依赖关系..."
 
 #: src/install.rs:220 src/install.rs:225
 msgid "failed to download sources"
-msgstr ""
+msgstr "未能下载源码"
 
 #: src/install.rs:230 src/install.rs:246 src/install.rs:254
 msgid "failed to build"
-msgstr ""
+msgstr "未能构建"
 
 #: src/install.rs:233
 msgid "parsing pkg list..."
-msgstr ""
+msgstr "正在解析软件包列表..."
 
 #: src/install.rs:261 src/install.rs:1462
 msgid "{}-{} is up to date -- skipping build"
-msgstr ""
+msgstr "{}-{} 已是最新 -- 跳过构建"
 
 #: src/install.rs:333 src/query.rs:50 src/lib.rs:84
 msgid "error:"
-msgstr ""
+msgstr "错误:"
 
 #: src/install.rs:334
 msgid "could not get news"
-msgstr ""
+msgstr "无法获取新闻"
 
 #: src/install.rs:339 src/install.rs:521 src/install.rs:716 src/install.rs:848
 msgid "Proceed with installation?"
-msgstr ""
+msgstr "继续安装？"
 
 #: src/install.rs:356
 msgid "no targets specified (use -h for help)"
-msgstr ""
+msgstr "没有指定目标 (使用 -h 来获取帮助)"
 
-#: src/install.rs:434 src/install.rs:461 src/search.rs:324 src/search.rs:360 src/lib.rs:227
+#: src/install.rs:434 src/install.rs:461 src/search.rs:324 src/search.rs:360
+#: src/lib.rs:227
 msgid " there is nothing to do"
-msgstr ""
+msgstr " 今日无事可做"
 
 #: src/install.rs:488
 msgid "can't install AUR package as root"
-msgstr ""
+msgstr "无法以 root 身份安装 AUR 包"
 
 #: src/install.rs:507
 msgid "Remove make dependencies after install?"
-msgstr ""
+msgstr "在安装后移除生成依赖？"
 
 #: src/install.rs:518
 msgid "Proceed to review?"
-msgstr ""
+msgstr "继续以审阅？"
 
 #: src/install.rs:559
 msgid "The following packages are not compatible with your architecture:"
-msgstr ""
+msgstr "下列软件包与你的系统架构不兼容:"
 
 #: src/install.rs:573
 msgid "Would you like to try build them anyway?"
-msgstr ""
+msgstr "你还是想要构建它们吗？"
 
 #: src/install.rs:662
 msgid "packages failed to build: {}"
-msgstr ""
+msgstr "未能构建的软件包: {}"
 
 #: src/install.rs:698
 msgid "could not find .SRINFO for '{}'"
-msgstr ""
+msgstr "无法找到 '{}' 的 .SRCINFO"
 
 #: src/install.rs:762
 msgid "failed to read dir: {}"
-msgstr ""
+msgstr "未能读取目录: {}"
 
 #: src/install.rs:778
-msgid "{} is a directory\n"
+msgid ""
+"{} is a directory\n"
 "\n"
-""
 msgstr ""
+"{} 是一个目录\n"
+"\n"
 
 #: src/install.rs:818
 msgid "failed to open: {}"
-msgstr ""
+msgstr "未能打开: {}"
 
 #: src/install.rs:830
 msgid "binary file: {}"
-msgstr ""
+msgstr "二进制文件: {}"
 
 #: src/install.rs:852
 msgid " nothing new to review"
-msgstr ""
+msgstr " 没有新东西可供审阅"
 
 #: src/install.rs:871
 msgid "failed to execute file manager: {}"
-msgstr ""
+msgstr "未能运行文件管理器: {}"
 
 #: src/install.rs:874
 msgid "file manager did not execute successfully"
-msgstr ""
+msgstr "文件管理器没有成功运行"
 
 #: src/install.rs:936
 msgid "duplicate packages: {}"
-msgstr ""
+msgstr "重复的软件包: {}"
 
 #: src/install.rs:975
 msgid "could not find all required packages:"
-msgstr ""
+msgstr "无法找到所有需要的软件包:"
 
 #: src/install.rs:982
-msgid "\n"
+msgid ""
+"\n"
 "    {:missing} (wanted by: {:stack})"
 msgstr ""
+"\n"
+"    {:missing} (被 {:stack} 需要)"
 
 #: src/install.rs:996 src/install.rs:1941
 msgid "{}-{} is up to date -- skipping"
-msgstr ""
+msgstr "{}-{} 已是最新 -- 跳过"
 
 #: src/install.rs:1011
 msgid "Calculating conflicts..."
-msgstr ""
+msgstr "正在查找软件包冲突..."
 
 #: src/install.rs:1017
 msgid "Calculating inner conflicts..."
-msgstr ""
+msgstr "正在查找内部软件包冲突..."
 
 #: src/install.rs:1029
 msgid "Inner conflicts found:"
-msgstr ""
+msgstr "发现内部软件包冲突:"
 
 #: src/install.rs:1051
 msgid "Conflicts found:"
-msgstr ""
+msgstr "发现软件包冲突:"
 
 #: src/install.rs:1074
 msgid "Conflicting packages will have to be confirmed manually"
-msgstr ""
+msgstr "有冲突的软件包需要手动确认"
 
 #: src/install.rs:1078
 msgid "can not install conflicting packages with --noconfirm"
-msgstr ""
+msgstr "无法通过 --noconfirm 来安装有冲突的软件包"
 
 #: src/install.rs:1117
 msgid "Repo"
-msgstr ""
+msgstr "软件库"
 
 #: src/install.rs:1124
 msgid "Repo Make"
-msgstr ""
+msgstr "软件库（生成依赖）"
 
 #: src/install.rs:1138
 msgid "Aur Make"
-msgstr ""
+msgstr "AUR（生成依赖）"
 
 #: src/install.rs:1240
 msgid "fetching devel info..."
-msgstr ""
+msgstr "正在获取开发版信息..."
 
 #: src/install.rs:1320
 msgid "Signing packages..."
-msgstr ""
+msgstr "正在为软件包签名..."
 
 #: src/install.rs:1398 src/install.rs:1403
 msgid "failed to download sources for '{}'"
-msgstr ""
+msgstr "未能下载 '{}' 的源码"
 
 #: src/install.rs:1408 src/install.rs:1447 src/install.rs:1455
 msgid "failed to build '{}'"
-msgstr ""
+msgstr "未能构建 '{}'"
 
 #: src/install.rs:1411
 msgid "{}: parsing pkg list..."
-msgstr ""
+msgstr "{}: 正在解析软件包列表..."
 
 #: src/install.rs:1473
 msgid "adding {} to the install list"
-msgstr ""
+msgstr "正在将 {} 加入安装列表"
 
 #: src/install.rs:1532
 msgid "could not find package '{:pkg}' in package list for '{:base}'"
-msgstr ""
+msgstr "无法在列表 '{:base}' 中找到软件包 '{:pkg}'"
 
 #: src/install.rs:1670
 msgid "can't find package name in packagelist: {}"
-msgstr ""
+msgstr "无法在软件包列表中找到软件包的名字: {}"
 
 #: src/install.rs:1743
 msgid "There are {} members in group"
-msgstr ""
+msgstr "组中有 {} 个成员"
 
 #: src/install.rs:1768
-msgid "\n"
+msgid ""
+"\n"
 "\n"
 "Enter a selection (default=all): "
 msgstr ""
+"\n"
+"\n"
+"输入选择 (默认=全部选定): "
 
 #: src/install.rs:1965
 msgid "{}-{} is up to date -- skipping install"
-msgstr ""
+msgstr "{}-{} 已是最新 -- 跳过安装"
 
 #: src/keys.rs:47
 msgid "keys need to be imported:)"
-msgstr ""
+msgstr "需要导入公钥:)"
 
 #: src/keys.rs:52
 msgid "     {:key} wanted by: {:base}"
-msgstr ""
+msgstr "     {:key} 被 {:base} 需要"
 
 #: src/news.rs:57
 msgid "No Date "
-msgstr ""
+msgstr "没有日期 "
 
 #: src/news.rs:60
 msgid "No Title"
-msgstr ""
+msgstr "没有标题"
 
 #: src/news.rs:69
 msgid "no new news"
-msgstr ""
+msgstr "没有新的新闻"
 
 #: src/query.rs:105
 msgid " [ignored]"
-msgstr ""
+msgstr " [已忽略]"
 
 #: src/repo.rs:164
 msgid "failed to get current exe"
-msgstr ""
+msgstr "未能获取当前可执行文件 (current_exe)"
 
 #: src/repo.rs:195
 msgid "syncing local databases..."
-msgstr ""
+msgstr "正在同步本地数据库..."
 
 #: src/repo.rs:201
 msgid "  nothing to do"
-msgstr ""
+msgstr "  今日无事可做"
 
 #: src/search.rs:32
 msgid "aur search failed"
-msgstr ""
+msgstr "aur 搜索失败"
 
 #: src/search.rs:158
 msgid "[Out-of-date: {}]"
-msgstr ""
+msgstr "[过时的: {}]"
 
 #: src/search.rs:164 src/search.rs:218
 msgid "[Installed: {}]"
-msgstr ""
+msgstr "[已安装: {}]"
 
 #: src/search.rs:166 src/search.rs:220
 msgid "[Installed]"
-msgstr ""
+msgstr "[已安装]"
 
 #: src/search.rs:173
 msgid "[Orphaned]"
-msgstr ""
+msgstr "[无人维护]"
 
 #: src/search.rs:263
 msgid "no packages match search"
-msgstr ""
+msgstr "没有符合搜索条件的软件包"
 
 #: src/search.rs:321
 msgid "Packages to install (eg: 1 2 3, 1-3):"
-msgstr ""
+msgstr "需要安装的包 (例如: 1 2 3, 1-3):"
 
 #: src/stats.rs:83
 msgid "Total installed packages: {}"
-msgstr ""
+msgstr "共安装包: {}"
 
 #: src/stats.rs:87
 msgid "Aur packages: {}"
-msgstr ""
+msgstr "AUR 包: {}"
 
 #: src/stats.rs:91
 msgid "Repo packages: {}"
-msgstr ""
+msgstr "软件库包: {}"
 
 #: src/stats.rs:95
 msgid "Explicitly installed packages: {}"
-msgstr ""
+msgstr "单独指定安装的包: {}"
 
 #: src/stats.rs:99
 msgid "Total Size occupied by packages: {}"
-msgstr ""
+msgstr "软件包共占用空间: {}"
 
 #: src/stats.rs:106
 msgid "Ten biggest packages:"
-msgstr ""
+msgstr "十个最大的包:"
 
 #: src/sync.rs:89 src/lib.rs:395
 msgid " [installed]"
-msgstr ""
+msgstr " [已安装]"
 
 #: src/upgrade.rs:122
 msgid "Looking for AUR upgrades"
-msgstr ""
+msgstr "正在查找 AUR 更新"
 
 #: src/upgrade.rs:148
 msgid "Looking for devel upgrades"
-msgstr ""
+msgstr "正在查找开发版更新"
 
 #: src/upgrade.rs:179
 msgid "warning:"
-msgstr ""
+msgstr "警告:"
 
 #: src/upgrade.rs:181
 msgid "{:pkg}: ignoring package upgrade ({:old} => {:new})"
-msgstr ""
+msgstr "{:pkg}: 正在忽略更新 ({:old} => {:new})"
 
 #: src/upgrade.rs:334
 msgid "Packages to exclude (eg: 1 2 3, 1-3):"
-msgstr ""
+msgstr "需要排除的包 (例如: 1 2 3, 1-3):"
 
 #: src/util.rs:80
 msgid "[Y/n]:"
-msgstr ""
+msgstr "[Y/n]:"
 
 #: src/util.rs:82
 msgid "[y/N]:"
-msgstr ""
+msgstr "[y/N]:"
 
 #: src/util.rs:101
 msgid "y"
-msgstr ""
+msgstr "y"
 
 #: src/util.rs:101
 msgid "yes"
-msgstr ""
+msgstr "yes"
 
 #: src/util.rs:103
 msgid "n"
-msgstr ""
+msgstr "n"
 
 #: src/util.rs:103
 msgid "no"
-msgstr ""
+msgstr "no"
 
 #: src/util.rs:299
 msgid "Enter a number (default=1): "
-msgstr ""
+msgstr "输入一个数字 (默认=1): "
 
 #: src/util.rs:316
 msgid "invalid number: {}"
-msgstr ""
+msgstr "不合法的数字: {}"
 
 #: src/util.rs:326
 msgid "invalid value: {:n} is not between 1 and {:max}"
-msgstr ""
+msgstr "不合法的值: {:n} 不在 1 和 {:max} 之间"
 
 #: src/lib.rs:153
 msgid "can not use chroot builds: devtools is not installed"
-msgstr ""
+msgstr "无法使用 chroot 构建: 需要安装 devtools"
 
 #: src/lib.rs:393
 msgid " [installed: {}]"
-msgstr ""
+msgstr " [已安装: {}]"
