--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 13:35-0300\n"
+"PO-Revision-Date: 2021-06-28 13:41-0300\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -196,7 +196,7 @@ msgstr "não foi possível obter pacotes dos repositórios: asp não está insta
 
 #: src/download.rs:231
 msgid "Missing ABS packages "
-msgstr "Faltando pacotes ABS "
+msgstr "Pacotes ABS faltando "
 
 #: src/download.rs:250 src/download.rs:276 src/download.rs:530
 #: src/download.rs:543 src/download.rs:557 src/exec.rs:72 src/exec.rs:113
