--- a/po/es.po
+++ b/po/es.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 18:02+0200\n"
+"PO-Revision-Date: 2021-06-28 19:45+0200\n"
 "Language: es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -663,19 +663,19 @@ msgstr "Paquetes a excluir (ej: 1 2 3, 1-3):"
 
 #: src/util.rs:80
 msgid "[Y/n]:"
-msgstr "[Y/n]:"
+msgstr "[S/n]:"
 
 #: src/util.rs:82
 msgid "[y/N]:"
-msgstr "[y/N]:"
+msgstr "[s/N]:"
 
 #: src/util.rs:101
 msgid "y"
-msgstr "y"
+msgstr "s"
 
 #: src/util.rs:101
 msgid "yes"
-msgstr "yes"
+msgstr "si"
 
 #: src/util.rs:103
 msgid "n"
