--- a/po/pt_BR.po
+++ b/po/pt_BR.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: paru VERSION\n"
 "Report-Msgid-Bugs-To: https://github.com/Morganamilo/paru\n"
 "POT-Creation-Date: 2021-06-28 03:24+0000\n"
-"PO-Revision-Date: 2021-06-28 13:41-0300\n"
+"PO-Revision-Date: 2021-06-28 14:59-0300\n"
 "Language: pt_BR\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -405,7 +405,7 @@ msgstr "Gostaria de compilá-los mesmo assim?"
 
 #: src/install.rs:662
 msgid "packages failed to build: {}"
-msgstr "pacotes"
+msgstr "os pacotes {} falharam na compilação"
 
 #: src/install.rs:698
 msgid "could not find .SRINFO for '{}'"
